// Simplified protobuf encoding/decoding for the trading protocol
// This is a minimal implementation for the MVP

export const PropTradingProtocol = {
  // Message type enums
  ClientRequestMsg: {
    create(obj) { return obj; },
    encode(message) {
      // Simple encoding - in production, use proper protobuf library
      const json = JSON.stringify(message);
      const encoder = new TextEncoder();
      return encoder.encode(json);
    },
    verify(message) {
      // Basic verification
      if (!message || typeof message !== 'object') {
        return 'Invalid message object';
      }
      return null;
    }
  },
  
  ServerResponseMsg: {
    decode(buffer) {
      // Simple decoding - in production, use proper protobuf library
      const decoder = new TextDecoder();
      const json = decoder.decode(buffer);
      try {
        return JSON.parse(json);
      } catch (e) {
        // If not JSON, return raw for debugging
        console.warn('Failed to parse message as JSON:', json);
        return { raw: json };
      }
    },
    toObject(message, options) {
      return message;
    }
  }
};

// Note: This is a placeholder implementation for the MVP.
// In production, you should:
// 1. Run: npm install protobufjs
// 2. Compile the .proto files: npm run proto
// 3. Use the generated proto.js file instead of this one